--- a/index.html
+++ b/index.html
@@ -64,19 +64,7 @@
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <button style="
-        background-color: dimgray;
-        position: relative;
-        left: 1300px;
-        top: 8px;
-        height: 40px;
-        width: 130px; 
-        font-size: 17px;
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
-        "><a href="login.html">Login/Signup</a>
+        <button class="login_signup_btn"><a href="login.html">Login/Signup</a>
         </button>
     </nav>
 
@@ -285,30 +273,32 @@
         </form>
     </footer>
     <div class="links">
+        <div class="end_line"></div>
+        <div class="small">
+            <div class="link_class">
+                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md" class="table_link">Documentation↗</a>
+                <a href="./website/contributor.html" class="table_link">Contributors↗</a>
+                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct↗</a>
+                <a href="website/license.html" class="table_link">License↗</a>
+                </div>
+                <div class="link_class">
+                    <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
+                    class="table_link">Figma Design↗</a>
+                    <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
+                    <a href="https://github.com/multiverseweb">Github Profile↗</a>
+                    <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn ↗</a>
+                </div>
+                
+            </div>
+            <div class="end_line"></div>
+            <br>
         <p>
         <h3 style="color:rgb(187, 187, 187);"> Designed & Developed by Tejas Gupta</h3>
         </p>
         <br>
         <h4 style="color:rgb(177, 177, 177);">Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h4>
         <div class="end_line"></div>
-        <div class="small">
-            <div class="link_class">
-                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                    class="table_link">Documentation↗</a>
-                <a href="./website/contributor.html" class="table_link">Contributors↗</a>
-                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct↗</a>
-                <a href="website/license.html" class="table_link">License↗</a>
-            </div>
-            <div class="link_class">
-                <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                    class="table_link">Figma Design↗</a>
-                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
-                <a href="https://github.com/multiverseweb">Github Profile↗</a>
-                <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn ↗</a>
-            </div>
-
         </div>
-        <div class="end_line"></div>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="website/script.js"></script>
 
