--- a/website/signup.html
+++ b/website/signup.html
@@ -1,96 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <style>
-        .login-container {
-            width: 500px;
-            height: auto; /* Changed to auto to fit content */
-            position: relative;
-            top: 100px;
-            left: 450px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
         }
-        .error-message {
-            color: red;
-            margin: 10px 0;
-            display: none; /* Initially hidden */
+
+        .main {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 20px;
+            gap: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 1200px;
+            margin: 40px auto;
+            background-color: white;
+            border-radius: 12px;
+        }
+
+        .login-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            background-color: #EAF7FF;
+            padding: 40px;
+            border-radius: 12px;
+            flex: 1;
+            max-width: 500px;
+            width: 100%;
+        }
+
+        .form-label{
+            font-weight: 600;
+        }
+        .form-control {
+            border: 2px solid black;
+            border-radius: 40px;
+            padding: 10px;
+        }
+
+        .form-text{
+            font-size: small;
+            text-align: left;
+            margin-left: 10px;
+        }
+        h2 {
+            font-weight: 800;
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 1.8rem;
+        }
+
+        .img-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+        }
+
+        .signupButton {
+            width: 100%;
+            padding: 15px;
+            font-weight: 700;
+            border: 2px solid #2C7DFF;
+        }
+
+        .back-button-container {
+            display: flex;
+            justify-content: flex-start;
+            margin: 20px;
+        }
+
+        .back-button {
+            background-color: black;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            font-weight: 600;
+            text-align: center;
+            text-decoration: none;
+        }
+        .info{
+            font-size: small;
+            text-align: center;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .main {
+                flex-direction: column;
+                padding: 15px;
+            }
+
+            .signupButton {
+                width: 100%;
+            }
+
+            .back-button-container {
+                justify-content: center;
+            }
+            .form .img-container{
+                width:100%
+            }
+        }
+
+        @media (max-width: 480px) {
+            .login-container {
+                padding: 20px;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            .back-button {
+                width: 100%;
+                text-align: center;
+            }
+
+            .img-container {
+                display: none;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div style="text-align: right; margin: 10px;">
-        <a href="../index.html" class="btn btn-secondary" style="width: 150px; position: relative; right: 1330px;">Back to Home</a>
+    <div class="back-button-container">
+        <a href="../index.html" class="back-button">Back to Home</a>
     </div>
-    <div class="login-container" style="padding-top: 20px;">
-        <h2 style="text-align: center;">Signup</h2>
-        <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
-        <div class="mb-3" style="margin-left: 40px;">
-            <label for="emailInput" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" style="width: 400px;">
-        </div>
-        <div class="mb-3" style="margin-left: 40px;">
-            <label for="passwordInput" class="form-label">Password</label>
-            <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
-            <div id="passwordHelpBlock" class="form-text" style="width: 400px">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+
+    <div class="main">
+        <div class="login-container">
+            <h2>Welcome to Dataverse!</h2>
+            <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
+
+            <div class="mb-3">
+                <label for="emailInput" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="emailInput" placeholder="Enter your email address">
             </div>
+
+            <div class="mb-3">
+                <label for="passwordInput" class="form-label">Password</label>
+                <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control"
+                    aria-describedby="passwordHelpBlock">
+                <div id="passwordHelpBlock" class="form-text">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
+                    special characters, or emoji.
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
+                <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput"
+                    class="form-control">
+            </div>
+
+            <button type="button" class="btn btn-primary signupButton" id="signupButton">Signup</button>
+            <p class="info">Already have an account? <a href="login.html">Login</a></p>
         </div>
-        <div class="mb-3" style="margin-left: 40px;">
-            <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
-            <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
-        </div>
-        <button type="button" class="btn btn-primary" id="signupButton" style="width: 400px; margin-left: 40px;">Signup</button>
-        <div style="text-align: center; margin-top: 10px;">
-            <p>Already have an account? <a href="login.html" style="text-decoration: none;">Login</a></p>
+
+        <div class="img-container">
+            <img src="/website/web_images/signup.avif" alt="Signup Image">
         </div>
     </div>
+
     <script>
-        document.getElementById('signupButton').addEventListener('click', function() {
+        document.getElementById('signupButton').addEventListener('click', function () {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const confirmPasswordInput = document.getElementById('confirmPasswordInput');
             const errorContainer = document.getElementById('errorContainer');
             const emailValue = emailInput.value.trim();
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-
-            // Trusted email domains
-            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com" , "protonmail.com" , "icloud.com" , "tutanota.com"];
+            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "protonmail.com", "icloud.com", "tutanota.com"];
             const emailDomain = emailValue.split('@')[1];
 
-            // Clear previous error messages
             errorContainer.style.display = 'none';
             errorContainer.innerHTML = '';
 
-            // Validate email format and trusted domain
             if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
-                errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
-                errorContainer.style.display = 'block'; // Show error message
+                errorContainer.innerHTML = 'Please use a valid email address from trusted providers.';
+                errorContainer.style.display = 'block';
                 return;
             }
 
-            // Check if passwords match
             if (passwordInput.value !== confirmPasswordInput.value) {
                 errorContainer.innerHTML = 'Both passwords do not match.';
-                errorContainer.style.display = 'block'; // Show error message
+                errorContainer.style.display = 'block';
                 return;
             }
 
-            // Clear input fields
             emailInput.value = '';
             passwordInput.value = '';
             confirmPasswordInput.value = '';
 
-            // Redirect to login page
             alert('Your account has been created successfully!');
             window.location.href = 'login.html';
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
