authentication button appears now across  all pages

--- a/index.html
+++ b/index.html
@@ -64,19 +64,7 @@
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <button style="
-        background-color: dimgray;
-        position: relative;
-        left: 1300px;
-        top: 8px;
-        height: 40px;
-        width: 130px; 
-        font-size: 17px;
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
-        "><a href="login.html">Login/Signup</a>
+        <button class="loginSignupbtn"><a href="./website/login.html">Login/Signup</a>
         </button>
     </nav>
 
