updated login page

--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                     <p style="text-align: left; margin-left: 270px; margin-top: 15px; font-size: medium; margin-bottom: 5px; "><a href="#" style=" text-decoration: none; color: #004ab7;">Forget Password ?</a></p>
                     <span style="color: rgb(0, 0, 0); font-size: 14px; position: relative;">Your password must be :</span><br>
                     • 8-20 characters long.<br>
-                    • Should contain letters and numbers<br>
+                    • Should contain letters and numbers.<br>
                     • Must not contain spaces, special characters, or emojis.
                 </div>
             </div>
