Change in singup and login page text and margin height , change in main page where the distance between logo and review box was far and change in text near review box.

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
         </div>
         <form name="Dataverse Reviews" method="POST" data-netlify="true" onsubmit="return validateForm()">
-            <p style="color:white">Let Me Know Your Thoughts!</p>
+            <p style="color:white">Let us  Know Your Thoughts!</p>
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="email" name="Email" placeholder="Your Email ID" required>
             <input name="Message" placeholder="Your Message" required>
