--- a/website/login.html
+++ b/website/login.html
@@ -11,9 +11,9 @@
             height: 450px;
             position: relative;
             top: 100px;
-            left: 450px;
+            left: 650px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
         }
     </style>
 </head>
@@ -37,8 +37,8 @@
 </div>
 <button type="button" class="btn btn-primary" id="loginButton" style="width: 400px; margin-left: 40px;">Login</button>
 <div style="text-align: center; margin-top: 10px;">
-    <p>Don't have an accout ?  <a href="signup.html" style="text-decoration: none;"> Sign UP</a></p>
-    <p style="text-align: center;"><a href="#" style=" text-decoration: none;">Forget Password</a></p>
+    <p>New user ?  <a href="signup.html" style="text-decoration: none;"> Sign UP</a></p>
+    <p style="text-align: center;"><a href="#" style=" text-decoration: none;">Forgot Password?</a></p>
 </div>
     </div>
     <script>
