--- a/website/signup.html
+++ b/website/signup.html
@@ -8,10 +8,10 @@
     <style>
         .login-container {
             width: 500px;
-            height: auto; /* Changed to auto to fit content */
+            height: 480px; /* Changed to auto to fit content */
             position: relative;
             top: 100px;
-            left: 450px;
+            left: 650px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
