fixed bugs due to PRs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <button class="loginSignupbtn"><a href="./website/login.html">Login/Signup</a>
+        <button class="loginSignupbtn"><a href="website\login.html">Login</a>
         </button>
     </nav>
 
@@ -119,8 +119,7 @@
                 <p id="data">Data</p>
                 <p>verse</p>
             </div>
-            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization
-                and data wrangling.</p>
+            <p id="intro_text">An Open-Source Software (OSS) that allows you to visualize data and track your finances!</p>
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn"
                 onclick="showCustomAlert('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can visit the following link to run the project locally on your computer:')">Get
