--- a/website/contributor.html
+++ b/website/contributor.html
@@ -38,6 +38,7 @@
                 <div id="notification" class="notification hidden"></div>
             </section>
         </div>
+        <a href="../index.html"><button class="goBack">Go To Home</button></a>
 
     <script src="contributor.js"></script>
 </body>
