--- a/website/codeOfconduct.html
+++ b/website/codeOfconduct.html
@@ -33,6 +33,8 @@
         <img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
+        <a href="login.html"><button class="loginSignupbtn">Login
+        </button></a>
     </nav>
     
     <button class="burger" id="burger" onclick="show()"></button>
@@ -45,30 +47,30 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="/index.html" class="table_link">Home</a></td>
+                <td><a href="../index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link" target="_blank">Encryptify</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link" target="_blank">Github Repository</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                        class="table_link" target="_blank">Documentation</a></td>
+                        class="table_link">Documentation</a></td>
+            </tr>
+            <tr>
+                <td><a href="contributor.html"
+                        class="table_link">Contributors</a></td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                        class="table_link" target="_blank">Figma
-                        Design</a>
+                        class="table_link">Figma Design</a>
                 </td>
             </tr>
             <tr>
-                <td><a href="codeOfconduct.html" class="table_link">Code of Conduct</a></td>
+                <td><a href="codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a></td>
             </tr>
             <tr>
-                <td><a href="license.html" class="table_link" target="_blank">License</a></td>
+                <td><a href="license.html" class="table_link">License</a></td>
             </tr>
         </table>
     </div>
@@ -172,6 +174,7 @@
             <p>This Code of Conduct is adapted from the <a href="https://www.contributor-covenant.org/" target="_blank">Contributor Covenant</a>, version 2.1, available at <a href="https://www.contributor-covenant.org/version/2/1/code_of_conduct.html" target="_blank">https://www.contributor-covenant.org/version/2/1/code_of_conduct.html</a>.</p>
         </div>
     </div>
+    <a href="../index.html"><button class="goBack">Go To Home</button></a>
     
     <script src="codeOfconduct.js"></script>
 
