--- a/website/license.html
+++ b/website/license.html
@@ -28,6 +28,8 @@
     <nav id="navbar">
         <img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
+        <a href="login.html"><button class="loginSignupbtn">Login
+        </button></a>
     </nav>
     
     <button class="burger" id="burger" onclick="show()"></button>
@@ -40,27 +42,27 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="/index.html" class="table_link">Home</a></td>
+                <td><a href="../index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link" target="_blank">Encryptify</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link" target="_blank">Github Repository</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                        class="table_link" target="_blank">Documentation</a></td>
+                        class="table_link">Documentation</a></td>
+            </tr>
+            <tr>
+                <td><a href="contributor.html"
+                        class="table_link">Contributors</a></td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                        class="table_link" target="_blank">Figma
-                        Design</a>
+                        class="table_link">Figma Design</a>
                 </td>
             </tr>
             <tr>
-                <td><a href="codeOfconduct.html" class="table_link">Code of Conduct</a></td>
+                <td><a href="codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a></td>
             </tr>
             <tr>
                 <td><a href="license.html" class="table_link">License</a></td>
@@ -75,7 +77,7 @@
             body{
                 margin:0;
             }
-            footer{
+            .tejas{
                 background: linear-gradient(180deg,silver,rgb(194, 187, 187));
                 padding: 10px;
                 color: whitesmoke;
@@ -85,9 +87,9 @@
         </style>
 
         
-        <footer>
+        <div class="tejas">
         <h3>Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h3>
-    </footer>
+        </div>
         <br>
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
@@ -107,6 +109,7 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     </div>
+    <a href="../index.html"><button class="goBack">Go To Home</button></a>
 
     <script src="license.js"></script>
 </body>
