--- a/index.html
+++ b/index.html
@@ -285,12 +285,7 @@
         </form>
     </footer>
     <div class="links">
-        <p>
-        <h3> Designed & Developed by Tejas Gupta</h3>
-        </p>
-        <br>
-        <h4>Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h4>
-        <div class="end_line"></div>
+        <div class="design_line colorchange"></div>
         <div class="small">
             <div class="link_class">
                 <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
@@ -309,6 +304,15 @@
 
         </div>
         <div class="end_line"></div>
+        <p class="footer_gap">
+            <h3> Designed & Developed by Tejas Gupta</h3>
+            
+            <br>
+
+            <h4>Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h4>
+        </p>
+        <br><br><br>
+       
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="website/script.js"></script>
 
