--- a/login.html
+++ b/login.html
@@ -42,8 +42,8 @@
 </head>
 
 <body >
-    <img class="image1"  src="C:\Users\Mimansha\OneDrive\Documents\GitHub\Dataverse\website\web_images\2dglow.png" alt="login_bg">
-    <img class="image2"  src="C:\Users\Mimansha\OneDrive\Documents\GitHub\Dataverse\website\web_images\2dglowhalfbg-removebg-preview.png" alt="login_bg">
+    <img class="image1"  src="C:/Users/Mimansha/OneDrive/Documents/GitHub/Dataverse/website/web_images/2dglow.png" alt="login_bg">
+    <img class="image2"  src="C:/Users/Mimansha/OneDrive/Documents/GitHub/Dataverse/website/web_images/2dglowhalfbg-removebg-preview.png" alt="login_bg">
     <img style="
     margin-left: 10px;
     position: absolute;
