--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="body">
     <!-- preloader -->
     <div id="video-loader">
-        <img src="website/web_images/loader.gif" alt="Dataverse Logo">
+        <video src="website/web_images/loader.mp4" autoplay muted></video>
     </div>
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
