--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="body">
     <!-- preloader -->
     <div id="video-loader">
-        <video src="website/web_images/loader.mp4" autoplay muted></video>
+        <video src="website/web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the video tag.</video>
     </div>
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
@@ -88,7 +88,7 @@
     <div class="scroll_icon" id="scroll_icon">SCROLL TO KNOW MORE
         <div class="shadow" id="shadow"></div>
     </div>
-    <div class="download" id="download" style="height: 600px;">
+    <div class="download" id="download"">
         <div class="left">
             <div id="map">
                 <div class="direction"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
