--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="examples" id="examples2">
 
             <img src="https://matplotlib.org/stable/_images/sphx_glr_polar_scatter_001.png" alt="">
-            <img src="website/web_images/wordcloud.webp" alt="">
+            <img src="website/web_images/wordcloud.png" alt="">
             <img src="https://www.pythoncharts.com/matplotlib/radar-charts/images/radar-chart-step1.png" alt="">
             <img src="https://discourse.matplotlib.org/uploads/default/original/2X/4/4a1f2f7f8f90b98517aa85b8b984d4c9a3a94c72.jpeg"
                 alt="">
@@ -187,7 +187,7 @@
             <img src="website/web_images/portal.webp" alt="">
             <img src="website/web_images/stars.webp" alt="">
             <img src="https://matplotlib.org/stable/_images/sphx_glr_polar_scatter_001.png" alt="">
-            <img src="website/web_images/wordcloud.webp" alt="">
+            <img src="website/web_images/wordcloud.png" alt="">
             <img src="https://www.pythoncharts.com/matplotlib/radar-charts/images/radar-chart-step1.png" alt="">
             <img src="https://discourse.matplotlib.org/uploads/default/original/2X/4/4a1f2f7f8f90b98517aa85b8b984d4c9a3a94c72.jpeg"
                 alt="">
