--- a/index.html
+++ b/index.html
@@ -274,6 +274,18 @@
                 <a href="https://github.com/multiverseweb">Github Profile↗</a>
                 <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn ↗</a>
             </div>
+            <script>
+                window.embeddedChatbotConfig = {
+                chatbotId: "oXTk6NN3jmcYKvgFB4Q00",
+                domain: "www.chatbase.co"
+                }
+                </script>
+                <script
+                src="https://www.chatbase.co/embed.min.js"
+                chatbotId="oXTk6NN3jmcYKvgFB4Q00"
+                domain="www.chatbase.co"
+                defer>
+                </script>
 
         </div>
         <div class="end_line"></div>
