Style updated for GET DIVERSE button

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn"
                 onclick="showCustomAlert('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can visit the following link to run the project locally on your computer:')">Get
-                Dataverse</button>
+                <span id="data">Dataverse</span></button>
 
             <div id="custom-alert" class="custom-alert">
                 <div class="custom-alert-content">
