--- a/signup.html
+++ b/signup.html
@@ -42,8 +42,8 @@
 </head>
 
 <body >
-    <img class="image1"  src="website\web_images\2dglow.png" alt="sign_bg">
-    <img class="image2"  src="website\web_images\2dglowhalfbg-removebg-preview.png" alt="sign_bg">
+    <img class="image1"  src="website/web_images/2dglow.png" alt="sign_bg">
+    <img class="image2"  src="website/web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
     <img style="
     margin-left: 10px;
     position: absolute;
