--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body id="body">
     <!-- preloader -->
     <div id="video-loader">
-        <video src="website/web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the video tag.</video>
+        <video src="website/web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the
+            video tag.</video>
     </div>
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
@@ -45,7 +46,7 @@
         <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
         <a href="website/login.html"><button class="loginSignupbtn">Login
-        </button></a>
+            </button></a>
     </nav>
 
     <button class="burger" id="burger" onclick="show()"></button>
@@ -68,8 +69,7 @@
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="website/contributor.html"
-                        class="table_link">Contributors</a></td>
+                <td><a href="website/contributor.html" class="table_link">Contributors</a></td>
             </tr>
             <tr>
                 <td>
@@ -88,7 +88,7 @@
     <div class="scroll_icon" id="scroll_icon">SCROLL TO KNOW MORE
         <div class="shadow" id="shadow"></div>
     </div>
-    <div class="download" id="download"">
+    <div class="download" id="download">
         <div class="left">
             <div id="map">
                 <div class="direction"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
@@ -99,7 +99,8 @@
                 <p id="data">Data</p>
                 <p>verse</p>
             </div>
-            <p id="intro_text">An Open-Source Software (OSS) that allows organizing, analyzing and visualizing data, providing flexible tools for financial tracking and customized chart creation.
+            <p id="intro_text">An Open-Source Software (OSS) that allows organizing, analyzing and visualizing data,
+                providing flexible tools for financial tracking and customized chart creation.
             </p>
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn"
@@ -253,32 +254,31 @@
         </form>
     </footer>
     <div class="links">
-        <p>
-        <p class="tejas_credits" style="color:rgb(187, 187, 187);"> Designed & Developed by Tejas Gupta</p>
-        </p>
-        <br>
-        <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> Tejas Gupta</p>
-        <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
                 <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                    class="table_link">Documentation↗</a>
-                <a href="./website/contributor.html" class="table_link">Contributors↗</a>
-                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct↗</a>
-                <a href="website/license.html" class="table_link">License↗</a>
+                    class="table_link">Documentation</a>
+                <a href="./website/contributor.html" class="table_link">Contributors</a>
+                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
+                <a href="website/license.html" class="table_link">License</a>
             </div>
             <div class="link_class">
                 <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                    class="table_link">Figma Design↗</a>
-                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
-                <a href="https://github.com/multiverseweb">Github Profile↗</a>
-                <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn ↗</a>
+                    class="table_link">Figma Design</a>
+                <a href="https://tejasgupta.netlify.app">Portfolio</a>
+                <a href="https://github.com/multiverseweb">Github Profile</a>
+                <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn</a>
             </div>
 
         </div>
         <div class="end_line"></div>
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-        <script src="website/script.js"></script>
+        <p class="tejas_credits" style="color:rgb(187, 187, 187); margin-top: 20px;"> Designed & Developed by Tejas Gupta</p>
+        <br>
+        <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> Tejas Gupta</p>
+    </div>
+    <div class="end_line"></div>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="website/script.js"></script>
 
 
 </body>
