--- a/website/login.html
+++ b/website/login.html
@@ -4,9 +4,11 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23C3tEN5ZzDh6LzjZzR4Ff1zU0q6Y5NOq1n" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <style>
         .goBack {
             position: fixed;
@@ -23,40 +25,106 @@
 
         .login-container {
             width: 500px;
-            height: 450px;
-            position: relative;
-            top: 100px;
-            left: 450px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            padding: 20px;
+        }
+
+        .form-label {
+            text-align: left;
+        }
+
+        .btn-primary {
+            background-color: grey;
+            color: black;
+            border-radius: 30px;
+            width: 70%;
+            height: 40px;
+            margin: 20px auto 10px;
+            display: block;
+        }
+
+        .social-login-buttons button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 30px;
+            padding: 10px 20px;
+            font-size: 14px;
+            width: 70%;
+            margin: 10px auto;
+        }
+
+        .btn-google {
+            background-color: #20b837cb;
+            color: white;
+        }
+
+        .btn-microsoft {
+            background-color: #0078D4;
+            color: white;
+        }
+
+        .btn-apple {
+            background-color: black;
+            color: white;
+        }
+
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
 
 <body>
-    <div class="login-container" style="padding-top: 20px;">
+    <div class="login-container">
         <h2 style="text-align: center;">Login</h2>
-        <div class="mb-3" style="margin-left: 40px;">
+        <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com"
-                style="width: 400px;">
+            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" style="width: 100%;">
         </div>
-        <div class="mb-3" style="margin-left: 40px;">
+        <div class="mb-3">
             <label for="inputPassword5" class="form-label">Password</label>
-            <input type="password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock"
-                style="width: 400px">
-            <div id="passwordHelpBlock" class="form-text" style="width: 400px">
+            <input type="password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 100%;">
+            <div id="passwordHelpBlock" class="form-text">
                 Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
                 special characters, or emoji.
             </div>
         </div>
-        <button type="button" class="btn btn-primary" id="loginButton"
-            style="width: 400px; margin-left: 40px;">Login</button>
-        <div style="text-align: center; margin-top: 10px;">
-            <p>Don't have an accout ? <a href="signup.html" style="text-decoration: none;"> Sign UP</a></p>
-            <p style="text-align: center;"><a href="#" style=" text-decoration: none;">Forget Password</a></p>
+        <button type="button" class="btn btn-primary" id="loginButton">Login</button>
+        <div style="text-align: center;">
+            <p>Don't have an account? <a href="signup.html" style="text-decoration: none;">Sign Up</a></p>
+            <p><a href="#" style="text-decoration: none;">Forget Password</a></p>
+        </div>
+
+        <div class="social-login-buttons">
+            <!-- Google Login Button -->
+            <button type="button" class="btn btn-google" onclick="window.location.href='https://accounts.google.com'">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" 
+                    alt="Google Icon" style="width: 20px; height: 20px; margin-right: 10px;"> Login with Google
+            </button>
+
+            <!-- Microsoft Login Button -->
+            <button type="button" class="btn btn-microsoft" onclick="window.location.href='https://login.microsoftonline.com/'">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg"
+                    alt="Microsoft Logo" style="width: 20px; height: 20px; margin-right: 10px;"> Login with Microsoft
+            </button>
+
+            <!-- Apple Login Button -->
+            <button type="button" class="btn btn-apple" onclick="window.location.href='https://appleid.apple.com/auth/authorize'">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Apple_logo_white.svg/256px-Apple_logo_white.svg.png?20220821122232" 
+                    alt="Apple Logo" style="width: 20px; height: 20px; margin-right: 10px;">
+                Login with Apple
+            </button>
         </div>
     </div>
+
     <script>
         document.getElementById('loginButton').addEventListener('click', function () {
             const emailInput = document.getElementById('emailInput');
@@ -67,13 +135,23 @@
                 alert('Invalid email address');
                 return;
             }
+
+            // Change the button color to red temporarily
+            const button = document.getElementById('loginButton');
+            button.style.backgroundColor = 'red';
+            
+            // Revert back to original color after a short delay
+            setTimeout(() => {
+                button.style.backgroundColor = ''; // Revert to original color
+            }, 300);
+
             emailInput.value = '';
             passwordInput.value = '';
-            // Redirect to index.html
             window.location.href = '/index.html';
             alert('Login successful!');
         });
     </script>
+
     <a href="../index.html"><button class="goBack">Go To Home</button></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
