--- a/website/signup.html
+++ b/website/signup.html
@@ -2,174 +2,121 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Full viewport height */
-            margin: 0; /* Remove default margin */
-            background-color: #f8f9fa; /* Light background color */
-        }
-        .login-container {
-            width: 600px; /* Increased width */
-            height: auto; /* Set to auto to fit content */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            padding: 20px; /* Added padding for inner spacing */
-            background-color: white; /* White background for the container */
-        }
-        .error-message {
-            color: red;
-            margin: 10px 0;
-            display: none; /* Initially hidden */
-        }
-        .goBack {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            padding: 10px;
-            background-color: #d0d0d032;
-            backdrop-filter: blur(7px);
-            color: rgb(105, 105, 105);
-            border: none;
-            border-radius: 7px;
-            box-shadow: 0 0 5px black;
-        }
-        .social-login-buttons button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 30px;
-            padding: 10px 20px;
-            font-size: 14px;
-            width: 70%; /* Keep width consistent */
-            margin: 10px auto;
-        }
-        .btn-google {
-            background-color: #20b837cb;
-            color: white;
-        }
-        .btn-microsoft {
-            background-color: #0078D4;
-            color: white;
-        }
-        .btn-apple {
+        body{
             background-color: black;
-            color: white;
         }
-        button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .image1{
+            width: 43%;
+            height: 90.9%;
+            object-fit: cover;
+            position: absolute;
+            opacity: 70%;
+            left: 75%;
+            top: -10%;
+            rotate: 36deg;
         }
-        .btn-primary {
-            background-color: grey; /* Changed to grey */
-            color: white; /* Ensure text is visible */
-            border-radius: 30px; /* Curved signup button */
-            width: 70%; /* Match width of social buttons */
-            margin: 10px auto; /* Center the button */
-            height: 45px; /* Adjusted height for better alignment */
-            border: none; /* Remove border */
+        .image2{
+            width: 37%;
+            height: 47%;
+            position: absolute;
+            object-fit: contain;
+            opacity: 90%;
+            top: 32%;
+            right: 84%;
+            rotate: -46deg;
         }
-        h2 {
-            margin-bottom: 20px; /* Add space below the heading */
+        .login-container{
+            width: 500px;
+            height: 500px;
+            position: relative;
+            background-color: rgba(158, 158, 158, 0.807);
+            top: 45px;
+            border-radius: 10px;
         }
     </style>
 </head>
 
-<body>
-    <div class="login-container">
-        <h2 style="text-align: center;">Sign Up</h2> <!-- Renamed heading -->
-        <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
-        <div class="mb-3">
-            <label for="emailInput" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" style="width: 100%;">
+<body >
+    <img class="image1"  src="./web_images/2dglow.png" alt="sign_bg">
+    <img class="image2"  src="./web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
+    <img style="
+    margin-left: 10px;
+    position: absolute;
+    width: 80px;
+    height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
+    <div style="margin-left: 6%;" class="top_dataverse">
+        <p id="data"> Data</p>
+        <p style="color: white;">verse</p>
+    </div>
+    <center>
+        <div style="text-align: right; margin: 10px;">
+            <a href="../index.html" class="btn btn-secondary" style="width: 200px; position: absolute  ; top: 30px; right: 175px; color: white; font-weight: 500; font-size: 18px;">Back To Home</a>
         </div>
-        <div class="mb-3">
-            <label for="passwordInput" class="form-label">Password</label>
-            <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 100%;">
-            <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+        <div class="login-container" style="padding-top: 20px;">
+            <h1 style="text-align: center; color: black; font-weight: 400; font: sans-serif;">SIGN UP</h1>
+            <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
+            <div style="text-align: left; margin-left: 10%;" class="mb-3">
+                <label for="emailInput" class="form-label" style="color: white;">Email address</label>
+                <input type="email" class="form-control" id="emailInput" placeholder="Enter your Email Address" style="width: 400px; margin-top: -5px">
+            </div>
+            <div style="text-align: left; margin-left: 10%;" class="mb-3">
+                <label for="passwordInput" class="form-label" style="color: white;">Password</label>
+                <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px; margin-top: -5px"></div>
+                <div style="text-align: left; margin-left: 10%;" class="mb-3">
+                    <label for="confirmPasswordInput" class="form-label" style="color: white;">Confirm Password</label>
+                    <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px; margin-top: -5px">
+                </div>
+                <div id="passwordHelpBlock" class="form-text" style="width: 400px; text-align: left; margin-top: -10px; margin-left: 10px;">
+                    <span style="color: rgb(0, 0, 0); font-size: 14px; position: relative;">Your password must be :</span><br>
+                    • 8-20 characters long.<br>
+                    • Should contain letters and numbers<br>
+                    • Must not contain spaces, special characters, or emojis.
+                </div>
+            <button type="button" class="btn btn-primary" id="signupButton" style="width: 400px; margin-top: 15px; font-weight: 400;">SIGN UP</button>
+            <div style="text-align: center; margin-top: 10px;">
+                <p>Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
             </div>
         </div>
-        <div class="mb-3">
-            <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
-            <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 100%;">
-        </div>
-        <div class="text-center"> <!-- Center the signup button -->
-            <button type="button" class="btn btn-primary" id="signupButton">Sign Up</button> <!-- Updated button -->
-        </div>
-        <div style="text-align: center; margin-top: 10px;">
-            <p>Already have an account? <a href="login.html" style="text-decoration: none;">Login</a></p>
-        </div>
-        
-        <div class="social-login-buttons">
-            <!-- Google Login Button -->
-            <button type="button" class="btn btn-google" onclick="window.location.href='https://accounts.google.com'">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" 
-                    alt="Google Icon" style="width: 20px; height: 20px; margin-right: 10px;"> Login with Google
-            </button>
-
-            <!-- Microsoft Login Button -->
-            <button type="button" class="btn btn-microsoft" onclick="window.location.href='https://login.microsoftonline.com/'">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg"
-                    alt="Microsoft Logo" style="width: 20px; height: 20px; margin-right: 10px;"> Login with Microsoft
-            </button>
-
-            <!-- Apple Login Button -->
-            <button type="button" class="btn btn-apple" onclick="window.location.href='https://appleid.apple.com/auth/authorize'">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Apple_logo_white.svg/256px-Apple_logo_white.svg.png?20220821122232" 
-                    alt="Apple Logo" style="width: 20px; height: 20px; margin-right: 10px;">
-                Login with Apple
-            </button>
-        </div>
-    </div>
-    <a href="../index.html"><button class="goBack">Go To Home</button></a>
-    <script>
-        document.getElementById('signupButton').addEventListener('click', function() {
-            const emailInput = document.getElementById('emailInput');
-            const passwordInput = document.getElementById('passwordInput');
-            const confirmPasswordInput = document.getElementById('confirmPasswordInput');
-            const errorContainer = document.getElementById('errorContainer');
-            const emailValue = emailInput.value.trim();
-            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-
-            // Trusted email domains
-            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "protonmail.com", "icloud.com", "tutanota.com"];
-            const emailDomain = emailValue.split('@')[1];
-
-            // Clear previous error messages
-            errorContainer.style.display = 'none';
-            errorContainer.innerHTML = '';
-
-            // Validate email format and trusted domain
-            if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
-                errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
-                errorContainer.style.display = 'block'; // Show error message
-                return;
-            }
-
-            // Check if passwords match
-            if (passwordInput.value !== confirmPasswordInput.value) {
-                errorContainer.innerHTML = 'Both passwords do not match.';
-                errorContainer.style.display = 'block'; // Show error message
-                return;
-            }
-
-            // Clear input fields
-            emailInput.value = '';
-            passwordInput.value = '';
-            confirmPasswordInput.value = '';
-
-            // Redirect to login page
-            alert('Your account has been created successfully!');
-            window.location.href = 'login.html';
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+        <script>
+            document.getElementById('signupButton').addEventListener('click', function() {
+                const emailInput = document.getElementById('emailInput');
+                const passwordInput = document.getElementById('passwordInput');
+                const confirmPasswordInput = document.getElementById('confirmPasswordInput');
+                const errorContainer = document.getElementById('errorContainer');
+                const emailValue = emailInput.value.trim();
+                const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+                // Trusted email domains
+                const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com" , "protonmail.com" , "icloud.com" , "tutanota.com"];
+                const emailDomain = emailValue.split('@')[1];
+                // Clear previous error messages
+                errorContainer.style.display = 'none';
+                errorContainer.innerHTML = '';
+                // Validate email format and trusted domain
+                if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
+                    errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
+                    errorContainer.style.display = 'block'; // Show error message
+                    return;
+                }
+                // Check if passwords match
+                if (passwordInput.value !== confirmPasswordInput.value) {
+                    errorContainer.innerHTML = 'Both passwords do not match.';
+                    errorContainer.style.display = 'block'; // Show error message
+                    return;
+                }
+                // Clear input fields
+                emailInput.value = '';
+                passwordInput.value = '';
+                confirmPasswordInput.value = '';
+                // Redirect to login page
+                alert('Your account has been created successfully!');
+                window.location.href = 'login.html';
+            });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        </body>
+        </html>
