--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
             </div>
             <script>
                 window.embeddedChatbotConfig = {
-                chatbotId: "oXTk6NN3jmcYKvgFB4Q00",
+                chatbotId: "oKgfHa3hvh7Ic0ypSqDbv",
                 domain: "www.chatbase.co"
                 }
                 </script>
                 <script
                 src="https://www.chatbase.co/embed.min.js"
-                chatbotId="oXTk6NN3jmcYKvgFB4Q00"
+                chatbotId="oKgfHa3hvh7Ic0ypSqDbv"
                 domain="www.chatbase.co"
                 defer>
                 </script>
